# glass_image

./: README.md  RELEASE-NOTES.md  pyproject.toml
configs/: coadd.swarp  example.yaml  glass_cband_config.yaml
glass_image/: __init__.py  beam_correction.py  casa_selfcal.py  clean_mask.py  configuration.py  convert_vis.py  errors.py  glass_imager.py  image_utils.py  logging.py  options.py  pb_correction.py  pointing.py  utils.py  wsclean.py
glass_image/prefect/: imager.py
slurm_scripts/: run_beam_conv.sh  run_glass_image.sh  run_glass_pbimage.sh
