[tool.poetry]
name = "glass-image"
version = "0.1.0"
description = "Quick and dirty script to image with glass"
authors = ["tgalvin <tim.galvin@csiro.au>"]
readme = "README.md"
packages = [{include = "glass_image"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
astropy = "^5.2.1"
scipy = "^1.10.1"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
aegeantools = "=2.2.0"
spython = "^0.3.0"
casatools = "^6.5.3.28"
casatasks = "^6.5.3.28"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"

[tool.poetry.scripts]
glass_image = 'glass_image.glass_imager:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
